Fix a Typo Error and Make Some Adjustments

--- a/index.css
+++ b/index.css
@@ -204,6 +204,11 @@ section p {
   padding: 0.2rem;
 }
 
+/* index */
+.intro {
+  text-transform: none;
+}
+
 /* Register/Login Form */
 .form_container {
   width: 86%;
