--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+* {
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 html,
 body {
   max-width: 1920px;
@@ -9,13 +14,13 @@ body {
 body {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: min-content repeat(2, auto) max-content;
+  grid-template-rows: repeat(2, min-content) auto max-content;
   grid-row-gap: 1rem;
   margin-top: 0;
 }
 
 header {
-  background-color: rgb(19, 113, 196);
+  background-color: rgba(0, 0, 0, 0.8);
   grid-column-start: 1;
   grid-column-end: 13;
 }
@@ -33,8 +38,11 @@ header .fresh li:nth-of-type(1) {
   grid-column-end: 11;
   list-style-type: none;
 }
+header h1,
 header a {
   text-decoration: none;
+  color: white;
+  font-size: 1.7rem;
 }
 header .fresh li:nth-of-type(2) {
   grid-column-start: 11;
@@ -43,25 +51,24 @@ header .fresh li:nth-of-type(2) {
 }
 
 aside {
-  background-color: aqua;
   grid-column-start: 1;
   grid-column-end: 13;
   padding: 0.4rem;
 }
+aside p {
+  font-size: 1.5rem;
+}
 
 main {
-  background-color: red;
   grid-column-start: 1;
   grid-column-end: 13;
   padding: 0.4rem;
 }
 main form {
-  box-sizing: border-box;
   padding: 1rem;
   width: 100%;
 }
 main input {
-  box-sizing: border-box;
   width: 100%;
 }
 main h1 {
@@ -73,16 +80,98 @@ main label {
 }
 
 footer {
-  background-color: rgb(236, 201, 7);
+  background-color: rgba(0, 0, 0, 0.8);
   grid-column-start: 1;
   grid-column-end: 13;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   justify-items: center;
 }
+footer article:nth-of-type(1) {
+  width: 100%;
+  text-align: center;
+}
 footer article {
-  grid-column-start: span 1;
+  grid-column-start: span 12;
 }
 footer p {
-  font-size: 1.9rem;
+  font-size: 1.6rem;
+  color: white;
+  text-transform: capitalize;
+}
+
+@media only screen and (width > 425px) {
+  main {
+    justify-self: center;
+    width: 90%;
+  }
+  aside {
+    justify-self: center;
+  }
+  .footer {
+    justify-items: center;
+  }
+  .footer .to_top hr {
+    border-width: 0.2rem;
+  }
+  .footer .art {
+    grid-column-start: span 6;
+    padding: 0.4rem;
+  }
+  .footer article:nth-of-type(10) {
+    grid-column-start: span 12;
+  }
+}
+@media only screen and (width > 768px) {
+  main {
+    width: 80%;
+    justify-self: center;
+  }
+  #top_div {
+    display: none;
+  }
+  #header_large {
+    display: block;
+  }
+  #header_large li:nth-of-type(5) svg {
+    width: 100%;
+    height: 3rem;
+  }
+  #header_large .header_ul {
+    padding-left: 0.2rem;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    align-items: center;
+    justify-items: center;
+  }
+  #header_large .header_ul li {
+    list-style-type: none;
+  }
+  #header_large li:nth-of-type(1) {
+    grid-column-start: span 5;
+    justify-self: start;
+    padding-left: 2rem;
+  }
+  #header_large li:nth-of-type(2),
+  #header_large li:nth-of-type(3),
+  #header_large li:nth-of-type(4) {
+    grid-column-start: span 2;
+  }
+  #header_large li:nth-of-type(5) {
+    grid-column-start: span 1;
+  }
+  .footer .art {
+    grid-column-start: span 4;
+  }
+}
+@media only screen and (width >= 1024px) {
+  main {
+    width: 70%;
+  }
+  .footer .art {
+    grid-column-start: span 3;
+  }
+  .footer article:nth-of-type(10) {
+    grid-column-start: span 12;
+  }
 }/*# sourceMappingURL=index.css.map */
