--- a/index.css
+++ b/index.css
@@ -369,7 +369,7 @@ header .header_large {
   display: none;
 }
 header .fresh {
-  padding-left: 0.8rem;
+  padding-left: 0;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   align-items: center;
@@ -378,6 +378,7 @@ header .fresh li:nth-of-type(1) {
   grid-column-start: 1;
   grid-column-end: 11;
   list-style-type: none;
+  padding-left: 0.8rem;
 }
 header h1,
 header a {
@@ -439,6 +440,7 @@ header .open {
   border-radius: 1rem;
   font-size: 1.5rem;
   text-align: center;
+  padding: 0.5rem 0.5rem;
 }
 .dashboard_body section hr {
   border: 0.1rem ridge rgb(0, 0, 0);
@@ -506,6 +508,7 @@ aside {
 }
 aside p {
   font-size: 1.5rem;
+  padding: 0 2rem;
 }
 
 main {
@@ -623,7 +626,7 @@ footer p {
     height: 3rem;
   }
   #header_large .header_ul {
-    padding-left: 0.2rem;
+    padding-left: 0;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     align-items: center;
